# model-editor

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
editor/: CMakeLists.txt
editor/src/editor/: game.cpp  game.h
editor/src/editor/camera/: CMakeLists.txt  orbital_camera_controller.cpp  orbital_camera_controller.h
editor/src/editor/character/: CMakeLists.txt  character_system.ixx  character_task_system.ixx  components.ixx
editor/src/editor/control/: CMakeLists.txt  action_bind.h  action_control.h  character_control_system.cpp  character_control_system.h  components.h  control_system.cpp  control_system.h  machine_control_system.cpp  machine_control_system.h  mouse_raycast.cpp  mouse_raycast.h  mouse_raycast_observer.h  mouse_raycast_system.cpp  mouse_raycast_system.h  selection_system.cpp  selection_system.h
editor/src/editor/graphics/: CMakeLists.txt  collider_manipulation.cpp  collider_manipulation.h  editor_render.cpp  editor_render.h
editor/src/editor/gui/: CMakeLists.txt  demo.h  gui.cpp  gui.h  main_layout.h
editor/src/editor/loader_fabric/: CMakeLists.txt  loader_fabric.h
editor/src/editor/machine/: CMakeLists.txt  base_machine_system.h  components.h  machine_connector.cpp  machine_connector.h  machine_loader.cpp  machine_loader.h  machine_loading_system.cpp  machine_loading_system.h  machine_system.cpp  machine_system.h  machine_type.h
editor/src/editor/model/: CMakeLists.txt  components.h  editor.cpp  editor.h  project.cpp  project.h
game/: CMakeLists.txt
game/src/game/: game.cpp  game.h  main.cpp
game/src/game/camera/: CMakeLists.txt  camera_controller.h  orbital_camera_controller.cpp  orbital_camera_controller.h
game/src/game/character/: CMakeLists.txt  character.ixx  character_system.ixx  character_task_system.ixx  task_queue.ixx
game/src/game/control/: CMakeLists.txt  action_bind.cpp  action_control.cpp  action_control.h  character_control_system.cpp  character_control_system.h  control_system.cpp  control_system.h  machine_control_system.cpp  machine_control_system.h  mouse_raycast.cpp  mouse_raycast.h  mouse_raycast_observer.h  mouse_raycast_system.cpp  mouse_raycast_system.h  selection_system.cpp  selection_system.h
game/src/game/gui/: CMakeLists.txt  gui.h
game/src/game/item/: CMakeLists.txt  classes.h  components.h  items.h
game/src/game/loader_fabric/: CMakeLists.txt
game/src/game/machine/: CMakeLists.txt  base_machine_system.h  machine_loader.h  machine_loading_system.cpp  machine_system.cpp  machine_system.h
lc_client/: CMakeLists.txt
lc_client/include/ldk_client/local_engine/: CMakeLists.txt  scene_controlling.h  scene_controlling_.h  time.h
lc_client/src/lc_client/: i_game_logic.h  local_engine.h  loop.cpp  loop.h  systems.cpp  systems.h
lc_client/src/lc_client/eng_cubemaps/: CMakeLists.txt  cubemap_loader.cpp  cubemap_loader.h  cubemap_system.cpp  cubemap_system.h  cubemap_texture_loader.cpp  cubemap_texture_loader.h  cubemap_work.h
lc_client/src/lc_client/eng_debug/: CMakeLists.txt
lc_client/src/lc_client/eng_entties/: CMakeLists.txt
lc_client/src/lc_client/eng_graphics/: CMakeLists.txt  _graphics_entities_util.h  graphics_settings.cpp  graphics_settings.h  i_render.h  i_window.h  material_system.cpp  material_system.h  mesh_loader.h  mesh_work.h  shader_loader.h  shader_system.cpp  shader_system.h  shader_work.h  skybox_render.cpp  skybox_render.h  texture.h
lc_client/src/lc_client/eng_gui/: CMakeLists.txt  gui.h  gui_console.cpp  gui_console.h  includes.h
lc_client/src/lc_client/eng_input/: CMakeLists.txt  glfw_input.cpp  glfw_input.h  i_input.h  key_code.h  key_code_strings.cpp  key_code_strings.h
lc_client/src/lc_client/eng_lighting/: CMakeLists.txt  lighting.cpp  lighting.h
lc_client/src/lc_client/eng_map/: CMakeLists.txt  map_.cpp  map_.h
lc_client/src/lc_client/eng_model/: CMakeLists.txt  model_loading.cpp  model_loading.h  model_manager.cpp  model_manager.h  model_parser.cpp  model_parser.h  model_system.cpp  model_system.h
lc_client/src/lc_client/eng_npc/: CMakeLists.txt  components.h  npc_graph.cpp  npc_graph.h  npc_graph_visualizer.cpp  npc_graph_visualizer.h  npc_system.cpp  npc_system.h
lc_client/src/lc_client/eng_physics/: CMakeLists.txt  physics.cpp  physics.h  physics_loader.cpp  physics_loader.h  physics_loading_system.cpp  physics_loading_system.h  physics_parser.cpp  physics_parser.h  physics_system.cpp  physics_system.h  physics_visualizer.cpp  physics_visualizer.h
lc_client/src/lc_client/eng_procedures/: CMakeLists.txt  graphics_entities_loading.cpp  graphics_entities_loading.h
lc_client/src/lc_client/eng_scene/: CMakeLists.txt  component_creator.cpp  component_creator.h  scene.cpp  scene.h  scene_.cpp  scene_.h  scene_loading.cpp  scene_loading.h  skybox.cpp  skybox.h
lc_client/src/lc_client/eng_script/: CMakeLists.txt  script_system.cpp  script_system.h
lc_client/src/lc_client/eng_systems/: CMakeLists.txt  graphics_systems.cpp  graphics_systems.h
lc_client/src/lc_client/eng_world/: CMakeLists.txt  world.cpp  world.h
lc_client/src/lc_client/exceptions/: CMakeLists.txt  command_exceptions.h  conpar_exceptions.h  glad_exceptions.h  glfw_exceptions.h  graphics_exceptions.h  input_exceptions.h  io_exceptions.h  lua_exceptions.h  npc_exceptions.h  physics_exception.h
lc_client/src/lc_client/local_engine/: CMakeLists.txt  scene_controlling.cpp  scene_controlling_.cpp  time.cpp
lc_client/src/lc_client/tier0/: CMakeLists.txt  imgui_fonts.h  tier0.cpp  tier0.h
lc_client/src/lc_client/tier1/: CMakeLists.txt  config.cpp  config.h  game_info.cpp  game_info.h  i_shaders.h  texture_manager.cpp  texture_manager.h  tier1.cpp  tier1.h
lc_client/src/lc_client/util/: CMakeLists.txt  directories.cpp  directories.h  eng_resource.cpp  eng_resource.h  file_util.cpp  file_util.h  i_eng_resource.h  image.cpp  image.h  pack.cpp  pack.h  timer.cpp  timer.h
lc_client/test/: CMakeLists.txt
lc_client/test/lc_client/: CMakeLists.txt
lc_client/test/lc_client/gui/: CMakeLists.txt  layout_controller_test.cpp  layout_controller_test.h  (+2 more)
src/app/: CMakeLists.txt
(+337 files in other folders)
